# Project_SpaceSonar_X

./: .gitattributes  .gitignore  AGENTS.md  BROKER_COST_NOTE.md  README.md  US100_BROKER_SYMBOL_NOTE.md  US100_TIME_SESSION_NOTE.md  package.json  pyproject.toml
.codex/: config.toml
configs/: README.md
configs/onnx_lab/: README.md  (+1 more)
data/: README.md
lab/: README.md
runtime/: README.md
spacesonar/: __init__.py
tests/: test_active_record_validator_graph.py  test_agent_consult_receipts.py  test_agent_event_projection.py  test_agent_metrics_projection.py  test_agent_observation_window.py  test_agent_work_receipt_v2.py  test_ci_scope_gate.py  test_ci_workflow_contract.py  test_control_plane_validator.py  test_execution_provenance_validator.py  test_fixture_data_contract.py  test_fresh_evaluator_contract.py  test_full_regression_gate.py  test_kpi_ledger_validator.py  test_l4_budget_accounting_policy.py  test_mt5_fixed_fixture_orchestrator.py  test_onnx_fixture_parity.py  test_open_wave01_event_barrier_campaign.py  test_open_wave01_session_transition_campaign.py  test_operating_slo_evaluator.py  test_policy_duplicate_lint.py  test_provenance_compaction_migration.py  test_refresh_artifact_registry_hashes.py  test_remote_repository_settings_verifier.py  test_repository_hygiene_validator.py  test_research_cycle_closeout_evaluator.py  test_routing_behavior.py  test_runtime_completion_contract.py  test_runtime_evidence_truth_kernel.py  test_runtime_graph_revalidation.py  test_score_replay_decision_adapter.py  test_skl2onnx_adapters.py  test_validate_agent_settings.py  (+30 more)
(+2854 files in other folders)
