[project]
name = "spacesonar-x"
version = "0.1.0"
description = "ID-based ONNX development lab for FPMarkets US100 M5 research."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "PyYAML>=6.0",
]
onnxlab = [
  "MetaTrader5>=5.0; platform_system == 'Windows'",
  "numpy>=1.26",
  "onnx>=1.16",
  "onnxruntime>=1.17",
  "pandas>=2.0",
  "PyYAML>=6.0",
  "scikit-learn>=1.4",
  "skl2onnx>=1.17",
]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]
